testchart2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: mini-ingresss
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: mini.info
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx1
          servicePort: 80
